--- a/3-Bootstrap/index.html
+++ b/3-Bootstrap/index.html
@@ -463,22 +463,22 @@
       </div>
     </section>
 
-    <section class="progress-section py">
+    <div class="progress-section py">
       <div class="container">
         <div class="progress">
           <div
             class="progress-bar progress-bar-striped progress-bar-animated"
-            role="progress-bar"
+            role="progressbar"
+            style="width: 75%"
             aria-valuenow="75"
             aria-valuemin="0"
             aria-valuemax="100"
-            style="width: 75%"
           >
             Test
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <section class="contact-us text-center">
       <div class="overlay-bg py">
@@ -486,7 +486,7 @@
           <i class="fa-solid fa-envelope fa-5x"></i>
           <h2>Tell Us What You Need</h2>
           <p>Feel Free to Contact Us Anytime</p>
-          <form role="form">
+          <form>
             <div class="row">
               <div class="col-md-6">
                 <div class="mb-3">
@@ -661,12 +661,12 @@
       </p>
     </footer>
 
-    <section class="loader-overlay overlay">
+    <div class="loader-overlay overlay">
       <div class="spinner">
         <div class="cube1"></div>
         <div class="cube2"></div>
       </div>
-    </section>
+    </div>
 
     <div class="scroll-top">
       <i class="fa-solid fa-up-long fa-2x"></i>
