--- a/3-Bootstrap/index.html
+++ b/3-Bootstrap/index.html
@@ -24,6 +24,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600&display=swap"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="css/hover-min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/purple-theme.css" />
@@ -463,6 +467,48 @@
       </div>
     </section>
 
+    <div id="clients" class="py">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <img
+              src="images/icons/bbc_icon.svg"
+              alt="BBC"
+              class="wow animate__animated animate__bounceInRight animate__slow"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/icons/cnn_icon.svg"
+              alt="CNN"
+              class="wow animate__animated animate__bounceInRight animate__slow animate__delay-2s"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/icons/digg_icon.svg"
+              alt="Digg"
+              class="wow animate__animated animate__bounceInRight animate__slow animate__delay-3s"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/icons/puma_icon.svg"
+              alt="PUMA"
+              class="wow animate__animated animate__bounceInRight animate__slow animate__delay-4s"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/icons/imdb_icon.svg"
+              alt="IMDB"
+              class="wow animate__animated animate__bounceInRight animate__slow animate__delay-5s"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="progress-section py">
       <div class="container">
         <div class="progress">
@@ -679,11 +725,19 @@
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
       crossorigin="anonymous"
     ></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
+
+    <script src="js/wow.min.js"></script>
+
     <script src="js/script.js"></script>
+
+    <script>
+      new WOW().init();
+    </script>
   </body>
 </html>
