Add 'niceScroll' Package

--- a/3-Bootstrap/index.html
+++ b/3-Bootstrap/index.html
@@ -732,12 +732,10 @@
       crossorigin="anonymous"
     ></script>
 
+    <script src="js/jquery.nicescroll.min.js"></script>
+
     <script src="js/wow.min.js"></script>
 
     <script src="js/script.js"></script>
-
-    <script>
-      new WOW().init();
-    </script>
   </body>
 </html>
