Add 'alt' to all images

--- a/3-PSD-To-HTML/index.html
+++ b/3-PSD-To-HTML/index.html
@@ -86,7 +86,7 @@
             <div class="col-6">
               <div class="row">
                 <div class="col-3">
-                  <img src="images/world_icon.svg" />
+                  <img src="images/world_icon.svg" alt="World" />
                 </div>
                 <div class="col-9">
                   <h3>Web Design</h3>
@@ -97,7 +97,7 @@
             <div class="col-6">
               <div class="row">
                 <div class="col-3">
-                  <img src="images/pen_basic_icon.svg" />
+                  <img src="images/pen_basic_icon.svg" alt="Pen" />
                 </div>
                 <div class="col-9">
                   <h3>Graphic Design</h3>
@@ -108,7 +108,7 @@
             <div class="col-6">
               <div class="row">
                 <div class="col-3">
-                  <img src="images/people_team_icon.svg" />
+                  <img src="images/people_team_icon.svg" alt="People" />
                 </div>
                 <div class="col-9">
                   <h3>Online Marketing</h3>
@@ -119,7 +119,7 @@
             <div class="col-6">
               <div class="row">
                 <div class="col-3">
-                  <img src="images/attach_clip_icon.svg" />
+                  <img src="images/attach_clip_icon.svg" alt="Attach" />
                 </div>
                 <div class="col-9">
                   <h3>SEO</h3>
@@ -327,15 +327,33 @@
         </div>
         <div class="work">
           <div class="row">
-            <div class="col-4"><img src="https://picsum.photos/400/400" /></div>
-            <div class="col-4"><img src="https://picsum.photos/400/400" /></div>
-            <div class="col-4"><img src="https://picsum.photos/400/400" /></div>
-            <div class="col-4"><img src="https://picsum.photos/400/400" /></div>
-            <div class="col-4"><img src="https://picsum.photos/400/400" /></div>
-            <div class="col-4"><img src="https://picsum.photos/400/400" /></div>
-            <div class="col-4"><img src="https://picsum.photos/400/400" /></div>
-            <div class="col-4"><img src="https://picsum.photos/400/400" /></div>
-            <div class="col-4"><img src="https://picsum.photos/400/400" /></div>
+            <div class="col-4">
+              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+            </div>
+            <div class="col-4">
+              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+            </div>
+            <div class="col-4">
+              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+            </div>
+            <div class="col-4">
+              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+            </div>
+            <div class="col-4">
+              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+            </div>
+            <div class="col-4">
+              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+            </div>
+            <div class="col-4">
+              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+            </div>
+            <div class="col-4">
+              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+            </div>
+            <div class="col-4">
+              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+            </div>
           </div>
         </div>
       </div>
