Use 'div' instead of 'section' in 'Testimonials Section'

--- a/3-PSD-To-HTML/index.html
+++ b/3-PSD-To-HTML/index.html
@@ -291,7 +291,7 @@
       </div>
     </section>
 
-    <section class="testimonials light-bg py">
+    <div class="testimonials light-bg py">
       <div class="container text-center">
         <figure>
           <blockquote>
@@ -310,7 +310,7 @@
           <li></li>
         </ul>
       </div>
-    </section>
+    </div>
 
     <section class="portfolio py">
       <div class="container">
