Add images as icons to 'footer'

--- a/3-PSD-To-HTML/index.html
+++ b/3-PSD-To-HTML/index.html
@@ -417,7 +417,21 @@
 
     <footer>
       <div class="container text-center">
-        <p>Copyright &copy; 2022 Focal</p>
+        <p>Copyright &copy; 2022 <a href="#">Focal</a></p>
+        <ul>
+          <li>
+            <a><img src="images/social/github_icon.svg" alt="Github" /></a>
+          </li>
+          <li>
+            <a><img src="images/social/linkedin_icon.svg" alt="LinkedIn" /></a>
+          </li>
+          <li>
+            <a><img src="images/social/facebook_icon.svg" alt="Facebook" /></a>
+          </li>
+          <li>
+            <a><img src="images/social/twitter_icon.svg" alt="Twitter" /></a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
