Use 'Font-Awesome' instead of images

--- a/3-PSD-To-HTML/index.html
+++ b/3-PSD-To-HTML/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PSD to HTML</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -65,7 +72,7 @@
     <section class="about-me">
       <div class="row items-center">
         <div class="col-5 img">
-          <img src="https://picsum.photos/600/700" alt="Avatar" />
+          <img src="https://picsum.photos/600/900" alt="Avatar" />
         </div>
         <div class="col-7 desc">
           <header class="p">
@@ -85,10 +92,10 @@
           <div class="row skills mt">
             <div class="col-6">
               <div class="row">
-                <div class="col-3">
-                  <img src="images/world_icon.svg" alt="World" />
+                <div class="col-2">
+                  <i class="fa-solid fa-earth-africa fa-2x"></i>
                 </div>
-                <div class="col-9">
+                <div class="col-10">
                   <h3>Web Design</h3>
                   <p>Lorem ipsum dolor sit. Lorem ipsum dolor sit.</p>
                 </div>
@@ -96,10 +103,10 @@
             </div>
             <div class="col-6">
               <div class="row">
-                <div class="col-3">
-                  <img src="images/pen_basic_icon.svg" alt="Pen" />
+                <div class="col-2">
+                  <i class="fa-solid fa-paintbrush fa-2x"></i>
                 </div>
-                <div class="col-9">
+                <div class="col-10">
                   <h3>Graphic Design</h3>
                   <p>Lorem ipsum dolor sit. Lorem ipsum dolor sit.</p>
                 </div>
@@ -107,10 +114,10 @@
             </div>
             <div class="col-6">
               <div class="row">
-                <div class="col-3">
-                  <img src="images/people_team_icon.svg" alt="People" />
+                <div class="col-2">
+                  <i class="fa-solid fa-people-group fa-2x"></i>
                 </div>
-                <div class="col-9">
+                <div class="col-10">
                   <h3>Online Marketing</h3>
                   <p>Lorem ipsum dolor sit. Lorem ipsum dolor sit.</p>
                 </div>
@@ -118,10 +125,10 @@
             </div>
             <div class="col-6">
               <div class="row">
-                <div class="col-3">
-                  <img src="images/attach_clip_icon.svg" alt="Attach" />
+                <div class="col-2">
+                  <i class="fa-solid fa-paperclip fa-2x"></i>
                 </div>
-                <div class="col-9">
+                <div class="col-10">
                   <h3>SEO</h3>
                   <p>Lorem ipsum dolor sit. Lorem ipsum dolor sit.</p>
                 </div>
@@ -420,16 +427,16 @@
         <p>Copyright &copy; 2022 <a href="#">Focal</a></p>
         <ul>
           <li>
-            <a><img src="images/social/github_icon.svg" alt="Github" /></a>
+            <a href="#"><i class="fa-brands fa-github-square fa-2x"></i></a>
           </li>
           <li>
-            <a><img src="images/social/linkedin_icon.svg" alt="LinkedIn" /></a>
+            <a href=""><i class="fa-brands fa-linkedin fa-2x"></i></a>
           </li>
           <li>
-            <a><img src="images/social/facebook_icon.svg" alt="Facebook" /></a>
+            <a href=""><i class="fa-brands fa-facebook-square fa-2x"></i></a>
           </li>
           <li>
-            <a><img src="images/social/twitter_icon.svg" alt="Twitter" /></a>
+            <a href=""><i class="fa-brands fa-twitter-square fa-2x"></i></a>
           </li>
         </ul>
       </div>
