Add 'img-fix' class to all images and Fix background of 'About Me' Section

--- a/3-PSD-To-HTML/index.html
+++ b/3-PSD-To-HTML/index.html
@@ -71,8 +71,8 @@
 
     <section class="about-me">
       <div class="row items-center">
-        <div class="col-5 img">
-          <img src="https://picsum.photos/600/900" alt="Avatar" />
+        <div class="col-5 p-0">
+          <div class="img-container"></div>
         </div>
         <div class="col-7 desc">
           <header class="p">
@@ -335,31 +335,67 @@
         <div class="work">
           <div class="row">
             <div class="col-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
           </div>
         </div>
