Add 'rel=noopener' to all links opening in new tabs

--- a/1-HTML-CSS/1-try.html
+++ b/1-HTML-CSS/1-try.html
@@ -20,7 +20,10 @@
         <strong>Strong Text</strong>, this is a <small>Small Text</small> and
         this is an <em>Italic Text</em>
       </p>
-      <a href="https://www.linkedin.com/in/sondossamii/" target="_blank"
+      <a
+        href="https://www.linkedin.com/in/sondossamii/"
+        target="_blank"
+        rel="noopener"
         >My LinkedIn Account</a
       >
       <br />
@@ -41,7 +44,7 @@
       </blockquote>
       <p>This is to try sub and sup Log <sub>3</sub> 9 = x<sup>2</sup></p>
       <p><del>This is Wrong Text</del> <ins>This is the right</ins></p>
-      <a href="https://github.com/SondosSamii" target="_blank"
+      <a href="https://github.com/SondosSamii" target="_blank" rel="noopener"
         >My Github Account</a
       >
       <br />
@@ -81,7 +84,7 @@
     <!-- Gitlab Section-->
     <div class="section" id="gitlab">
       <h1>Hello World!</h1>
-      <a href="https://gitlab.com/SondosSamii" target="_blank"
+      <a href="https://gitlab.com/SondosSamii" target="_blank" rel="noopener"
         >My Gitlab Account</a
       >
       <br />
@@ -108,7 +111,7 @@
         </caption>
         <colgroup>
           <!-- Only Width and Span Fully Supported-->
-          <col span="1" width="150px" style="background-color: #003030" />
+          <col span="1" style="background-color: #003030" />
           <col span="3" style="background-color: teal" />
         </colgroup>
         <thead>
