--- a/1-HTML-CSS/3-simple-layout.html
+++ b/1-HTML-CSS/3-simple-layout.html
@@ -23,7 +23,10 @@
       <img src="https://picsum.photos/500/500" alt="Placeholder" />
       <p>
         March 27<sup>th</sup> 2022
-        <a href="https://www.linkedin.com/in/sondossamii/" target="_blank"
+        <a
+          href="https://www.linkedin.com/in/sondossamii/"
+          target="_blank"
+          rel="noopener"
           >LinkedIn Account</a
         >
       </p>
@@ -31,7 +34,9 @@
     <div class="footer" id="footer">
       <p>
         Copyright &copy; 2022 All Right Reserved to
-        <a href="https://github.com/SondosSamii" target="_blank">SondosSamii</a>
+        <a href="https://github.com/SondosSamii" target="_blank" rel="noopener"
+          >SondosSamii</a
+        >
         &reg;
       </p>
     </div>
