--- a/1-HTML-CSS/4-css-course.html
+++ b/1-HTML-CSS/4-css-course.html
@@ -19,7 +19,10 @@
       <p class="upper">This is a transformed text to uppercase</p>
       <p class="lower">This is a transformed text to lowercase</p>
       <p>Old Price is <span class="old">$150</span><br />New Price is $99.9</p>
-      <a href="https://www.linkedin.com/in/sondossamii/" target="_blank"
+      <a
+        href="https://www.linkedin.com/in/sondossamii/"
+        target="_blank"
+        rel="noopener"
         >Sondos Sami | LinkedIn</a
       >
       <br />
