--- a/2-HTML5-CSS3/1-index.html
+++ b/2-HTML5-CSS3/1-index.html
@@ -11,7 +11,10 @@
       <h1>Hello World!</h1>
       <p>
         Developed by
-        <a href="https://www.github.com/SondosSamii" target="_blank"
+        <a
+          href="https://www.github.com/SondosSamii"
+          target="_blank"
+          rel="noopener"
           >SondosSamii</a
         >
       </p>
@@ -195,6 +198,7 @@
               type="submit"
               value="Submit in New Window"
               formtarget="_blank"
+              rel="noopener"
               formnovalidate
             />
           </form>
