--- a/2-HTML5-CSS3/3-css3.html
+++ b/2-HTML5-CSS3/3-css3.html
@@ -79,11 +79,15 @@
                 <a
                   href="https://www.linkedin.com/in/sondossamii/"
                   target="_blank"
+                  rel="noopener"
                   >LinkedIn</a
                 >
               </li>
               <li>
-                <a href="https://www.github.com/sondossamii/" target="_blank"
+                <a
+                  href="https://www.github.com/sondossamii/"
+                  target="_blank"
+                  rel="noopener"
                   >Github</a
                 >
               </li>
