--- a/3-Bootstrap/index.html
+++ b/3-Bootstrap/index.html
@@ -700,7 +700,10 @@
         Copyright &copy; 2022
         <span
           >Made with <i class="fa-solid fa-heart"></i> by
-          <a href="https://github.com/SondosSamii" target="_blank"
+          <a
+            href="https://github.com/SondosSamii"
+            target="_blank"
+            rel="noopener"
             >SondosSamii</a
           ></span
         >
