Add title attribute to 'iframe' tag

--- a/1-HTML-CSS/1-try.html
+++ b/1-HTML-CSS/1-try.html
@@ -49,7 +49,12 @@
       >
       <br />
 
-      <iframe name="w3-org" class="w3-org" src="http://www.w3.org"></iframe>
+      <iframe
+        src="http://www.w3.org"
+        title="w3 Website"
+        name="w3-org"
+        class="w3-org"
+      ></iframe>
       <br />
 
       <!-- Unordered List-->
