--- a/2-HTML5-CSS3/1-index.html
+++ b/2-HTML5-CSS3/1-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="Description" content="Welcome to HTML5 Practice" />
