Add 'title' tag

--- a/1-HTML-CSS/4-css-course.html
+++ b/1-HTML-CSS/4-css-course.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="This is to practice CSS with ElZero" />
+    <title>CSS Course</title>
     <link rel="stylesheet" href="style/4-style.css" />
   </head>
   <body>
