Add 'aria-hidden=true' to 'Font-Awesome' Tags

--- a/3-Bootstrap/index.html
+++ b/3-Bootstrap/index.html
@@ -63,6 +63,7 @@
             class="fa-solid fa-gears"
             id="toggle-btn"
             onclick="toggleBox()"
+            aria-hidden="true"
           ></i>
         </div>
       </div>
@@ -223,22 +224,22 @@
         <h2>Our Features</h2>
         <div class="row">
           <div class="col-12 col-sm-6 col-lg-3 feature pb-3">
-            <i class="bi bi-check-lg fa-2x"></i>
+            <i class="bi bi-check-lg fa-2x" aria-hidden="true"></i>
             <h3>100% Responsive</h3>
             <p>Lorem ipsum dolor sit nam. quia eos quo minus?</p>
           </div>
           <div class="col-12 col-sm-6 col-lg-3 feature pb-3">
-            <i class="bi bi-ui-checks fa-2x"></i>
+            <i class="bi bi-ui-checks fa-2x" aria-hidden="true"></i>
             <h3>Pixel Perfect</h3>
             <p>Lorem ipsum dolor sit nam. quia eos quo minus?</p>
           </div>
           <div class="col-12 col-sm-6 col-lg-3 feature pb-3">
-            <i class="bi bi-file-text fa-2x"></i>
+            <i class="bi bi-file-text fa-2x" aria-hidden="true"></i>
             <h3>Well Documented</h3>
             <p>Lorem ipsum dolor sit nam. quia eos quo minus?</p>
           </div>
           <div class="col-12 col-sm-6 col-lg-3 feature pb-3">
-            <i class="bi bi-tools fa-2x"></i>
+            <i class="bi bi-tools fa-2x" aria-hidden="true"></i>
             <h3>Maintainable</h3>
             <p>Lorem ipsum dolor sit nam. quia eos quo minus?</p>
           </div>
@@ -380,9 +381,9 @@
                 <p>
                   Lorem ipsum dolor sit nam. quia eos quo minus?
                   <br />
-                  <i class="fa-brands fa-facebook-f"></i>
-                  <i class="fa-brands fa-twitter"></i>
-                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
+                  <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+                  <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                 </p>
               </div>
             </div>
@@ -397,10 +398,10 @@
                 <p>
                   Lorem ipsum dolor sit nam. quia eos quo minus?
                   <br />
-                  <i class="fa-brands fa-facebook-f"></i>
-                  <i class="fa-brands fa-twitter"></i>
-                  <i class="fa-brands fa-instagram"></i>
-                  <i class="fa-brands fa-github"></i>
+                  <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
+                  <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+                  <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                  <i class="fa-brands fa-github" aria-hidden="true"></i>
                 </p>
               </div>
             </div>
@@ -415,9 +416,9 @@
                 <p>
                   Lorem ipsum dolor sit nam. quia eos quo minus?
                   <br />
-                  <i class="fa-brands fa-facebook-f"></i>
-                  <i class="fa-brands fa-twitter"></i>
-                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
+                  <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+                  <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                 </p>
               </div>
             </div>
@@ -432,10 +433,10 @@
                 <p>
                   Lorem ipsum dolor sit nam. quia eos quo minus?
                   <br />
-                  <i class="fa-brands fa-facebook-f"></i>
-                  <i class="fa-brands fa-twitter"></i>
-                  <i class="fa-brands fa-instagram"></i>
-                  <i class="fa-brands fa-github"></i>
+                  <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
+                  <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+                  <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                  <i class="fa-brands fa-github" aria-hidden="true"></i>
                 </p>
               </div>
             </div>
@@ -460,7 +461,11 @@
               aria-describedby="subscribe-btn"
             />
             <button class="btn" type="button" id="subscribe-btn">
-              <i class="fa-solid fa-envelope-circle-check"></i> Subscribe
+              <i
+                class="fa-solid fa-envelope-circle-check"
+                aria-hidden="true"
+              ></i>
+              Subscribe
             </button>
           </div>
         </form>
@@ -529,7 +534,7 @@
     <section class="contact-us text-center">
       <div class="overlay-bg py">
         <div class="container">
-          <i class="fa-solid fa-envelope fa-5x"></i>
+          <i class="fa-solid fa-envelope fa-5x" aria-hidden="true"></i>
           <h2>Tell Us What You Need</h2>
           <p>Feel Free to Contact Us Anytime</p>
           <form>
@@ -699,7 +704,7 @@
       <p class="copyright text-center h5 py-3 mb-0">
         Copyright &copy; 2022
         <span
-          >Made with <i class="fa-solid fa-heart"></i> by
+          >Made with <i class="fa-solid fa-heart" aria-hidden="true"></i> by
           <a
             href="https://github.com/SondosSamii"
             target="_blank"
@@ -718,7 +723,7 @@
     </div>
 
     <div class="scroll-top">
-      <i class="fa-solid fa-up-long fa-2x"></i>
+      <i class="fa-solid fa-up-long fa-2x" aria-hidden="true"></i>
     </div>
 
     <script
