--- a/3-PSD-To-HTML/index.html
+++ b/3-PSD-To-HTML/index.html
@@ -93,7 +93,10 @@
             <div class="col-6">
               <div class="row">
                 <div class="col-2">
-                  <i class="fa-solid fa-earth-africa fa-2x"></i>
+                  <i
+                    class="fa-solid fa-earth-africa fa-2x"
+                    aria-hidden="true"
+                  ></i>
                 </div>
                 <div class="col-10">
                   <h3>Web Design</h3>
@@ -104,7 +107,10 @@
             <div class="col-6">
               <div class="row">
                 <div class="col-2">
-                  <i class="fa-solid fa-paintbrush fa-2x"></i>
+                  <i
+                    class="fa-solid fa-paintbrush fa-2x"
+                    aria-hidden="true"
+                  ></i>
                 </div>
                 <div class="col-10">
                   <h3>Graphic Design</h3>
@@ -115,7 +121,10 @@
             <div class="col-6">
               <div class="row">
                 <div class="col-2">
-                  <i class="fa-solid fa-people-group fa-2x"></i>
+                  <i
+                    class="fa-solid fa-people-group fa-2x"
+                    aria-hidden="true"
+                  ></i>
                 </div>
                 <div class="col-10">
                   <h3>Online Marketing</h3>
@@ -126,7 +135,7 @@
             <div class="col-6">
               <div class="row">
                 <div class="col-2">
-                  <i class="fa-solid fa-paperclip fa-2x"></i>
+                  <i class="fa-solid fa-paperclip fa-2x" aria-hidden="true"></i>
                 </div>
                 <div class="col-10">
                   <h3>SEO</h3>
@@ -463,16 +472,33 @@
         <p>Copyright &copy; 2022 <a href="#">Focal</a></p>
         <ul>
           <li>
-            <a href="#"><i class="fa-brands fa-github-square fa-2x"></i></a>
+            <a href="#"
+              ><i
+                class="fa-brands fa-github-square fa-2x"
+                aria-hidden="true"
+              ></i
+            ></a>
           </li>
           <li>
-            <a href=""><i class="fa-brands fa-linkedin fa-2x"></i></a>
+            <a href=""
+              ><i class="fa-brands fa-linkedin fa-2x" aria-hidden="true"></i
+            ></a>
           </li>
           <li>
-            <a href=""><i class="fa-brands fa-facebook-square fa-2x"></i></a>
+            <a href=""
+              ><i
+                class="fa-brands fa-facebook-square fa-2x"
+                aria-hidden="true"
+              ></i
+            ></a>
           </li>
           <li>
-            <a href=""><i class="fa-brands fa-twitter-square fa-2x"></i></a>
+            <a href=""
+              ><i
+                class="fa-brands fa-twitter-square fa-2x"
+                aria-hidden="true"
+              ></i
+            ></a>
           </li>
         </ul>
       </div>
