Remove commented code

--- a/2-JS/1-index.html
+++ b/2-JS/1-index.html
@@ -62,8 +62,8 @@
     <h2 id="years-error"></h2>
 
     <script src="1-events.js"></script>
-    <!-- <script src="2-array.js"></script> -->
-    <!-- <script src="3-string.js"></script> -->
+    <script src="2-array.js"></script>
+    <script src="3-string.js"></script>
     <script src="4-object.js"></script>
   </body>
 </html>
