Uncomment code to new files

--- a/2-HTML5-CSS3/2-canvas-svg.html
+++ b/2-HTML5-CSS3/2-canvas-svg.html
@@ -27,15 +27,12 @@
     </style>
   </head>
   <body>
-    <!-- <img src="media/smile.svg" alt="Smiley Face" /> -->
-
     <svg width="300" height="280" xmlns="http://www.w3.org/2000/svg">
       <rect x="0" y="0" width="100%" height="100%" fill="#FBDAF1" />
       <circle r="50" cx="75" cy="70" fill="#aa98a9" />
       <circle r="50" cx="225" cy="70" fill="#aa98a9" />
       <circle r="20" cx="85" cy="80" fill="#E3CBF6" />
       <circle r="20" cx="215" cy="80" fill="#E3CBF6" />
-      <!-- <ellipse rx="25" ry="15" cx="150" cy="140" fill="blue" /> -->
       <rect x="75" y="175" width="50%" height="25%" fill="#B291CE" />
       <circle r="40" cx="100" cy="160" class="mouth" />
       <circle r="40" cx="200" cy="160" class="mouth" />
@@ -51,7 +48,8 @@
       Your Browser does not support SVG
     </svg>
 
-    <!-- <canvas id="canvas"></canvas> -->
-    <script src="canvas.js"></script>
+    <script src="canvas/first-canvas.js"></script>
+    <script src="canvas/second-canvas.js"></script>
+    <script src="canvas/third-canvas.js"></script>
   </body>
 </html>
