--- a/4-SASS/index.html
+++ b/4-SASS/index.html
@@ -351,31 +351,67 @@
         <div class="work">
           <div class="row">
             <div class="col-6 col-sm-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-6 col-sm-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-6 col-sm-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-6 col-sm-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-6 col-sm-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-6 col-sm-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-6 col-sm-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-6 col-sm-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
             <div class="col-6 col-sm-4">
-              <img src="https://picsum.photos/400/400" alt="Placeholder" />
+              <img
+                src="https://picsum.photos/400/400"
+                alt="Placeholder"
+                class="img-fix"
+              />
             </div>
           </div>
         </div>
