Fix some Duplications

--- a/3-Bootstrap/index.html
+++ b/3-Bootstrap/index.html
@@ -379,7 +379,7 @@
                 />
                 <h3>Amr Mohamed</h3>
                 <p>
-                  Lorem ipsum dolor sit nam. quia eos quo minus?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   <br />
                   <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
                   <i class="fa-brands fa-twitter" aria-hidden="true"></i>
@@ -396,7 +396,7 @@
                 />
                 <h3>Sondos Sami</h3>
                 <p>
-                  Lorem ipsum dolor sit nam. quia eos quo minus?
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                   <br />
                   <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
                   <i class="fa-brands fa-twitter" aria-hidden="true"></i>
@@ -412,9 +412,9 @@
                   alt="Amr Mohamed"
                   class="img-fluid rounded-circle"
                 />
-                <h3>Amr Mohamed</h3>
+                <h3>Ahmed Maged</h3>
                 <p>
-                  Lorem ipsum dolor sit nam. quia eos quo minus?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   <br />
                   <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
                   <i class="fa-brands fa-twitter" aria-hidden="true"></i>
@@ -429,9 +429,9 @@
                   alt="Sondos Sami"
                   class="img-fluid rounded-circle"
                 />
-                <h3>Sondos Sami</h3>
+                <h3>Radwa Adel</h3>
                 <p>
-                  Lorem ipsum dolor sit nam. quia eos quo minus?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   <br />
                   <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
                   <i class="fa-brands fa-twitter" aria-hidden="true"></i>
