--- a/3-PSD-To-HTML/index.html
+++ b/3-PSD-To-HTML/index.html
@@ -233,9 +233,10 @@
               <span class="main-tag">4.0 GPA</span>
               <hr />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Corporis temporibus cumque ullam natus, et omnis cupiditate cum
-                quasi aliquam? Laudantium exercitationem similique.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+                iste animi earum. Minus voluptatibus illo non, id rem, ducimus
+                provident quae consequuntur mollitia culpa modi asperiores natus
+                blanditiis vitae. Quidem.
               </p>
             </header>
             <header>
@@ -244,9 +245,10 @@
               <span class="main-tag">4.0 GPA</span>
               <hr />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Corporis temporibus cumque ullam natus, et omnis cupiditate cum
-                quasi aliquam? Laudantium exercitationem similique.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+                eligendi, doloremque ipsum quod nulla cumque sequi iste ratione
+                non illo id libero unde aliquid, inventore consequuntur esse
+                voluptate alias dolor.
               </p>
             </header>
           </div>
@@ -275,9 +277,9 @@
               <span class="main-tag">2 Years</span>
               <hr />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Corporis temporibus cumque ullam natus, et omnis cupiditate cum
-                quasi aliquam? Laudantium exercitationem similique.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Ducimus, dolorem? Ea ipsam quam necessitatibus molestiae atque
+                obcaecati in, tempora consequatur adipisci doloribus similique!
               </p>
             </header>
             <header>
@@ -286,9 +288,9 @@
               <span class="main-tag">3 Years</span>
               <hr />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Corporis temporibus cumque ullam natus, et omnis cupiditate cum
-                quasi aliquam? Laudantium exercitationem similique.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                aliquam sit adipisci quidem ipsum ipsa tempora corporis autem
+                nam necessitatibus numquam alias beatae culpa, a ullam et.
               </p>
             </header>
             <header>
@@ -297,9 +299,9 @@
               <span class="main-tag">1 Year</span>
               <hr />
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Corporis temporibus cumque ullam natus, et omnis cupiditate cum
-                quasi aliquam? Laudantium exercitationem similique.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+                debitis dolores voluptatem vero sit quasi, expedita amet odio.
+                Quos velit esse dolorum perferendis nam voluptate omnis quo.
               </p>
             </header>
           </div>
@@ -346,63 +348,63 @@
             <div class="col-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 1"
                 class="img-fix"
               />
             </div>
             <div class="col-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 2"
                 class="img-fix"
               />
             </div>
             <div class="col-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 3"
                 class="img-fix"
               />
             </div>
             <div class="col-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 4"
                 class="img-fix"
               />
             </div>
             <div class="col-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 5"
                 class="img-fix"
               />
             </div>
             <div class="col-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 6"
                 class="img-fix"
               />
             </div>
             <div class="col-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 7"
                 class="img-fix"
               />
             </div>
             <div class="col-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 8"
                 class="img-fix"
               />
             </div>
             <div class="col-4">
               <img
                 src="https://picsum.photos/400/400"
-                alt="Placeholder"
+                alt="Placeholder 9"
                 class="img-fix"
               />
             </div>
